Creando notas con asunto elegido por usuario

--- a/DesafioNotas/app/src/main/res/values-es-rES/strings.xml
+++ b/DesafioNotas/app/src/main/res/values-es-rES/strings.xml
@@ -10,4 +10,5 @@
     <string name="strConfirmacionBorrar">Sí</string>
     <string name="strNegacionBorrar">No</string>
     <string name="strEliminando">Eliminando</string>
+    <string name="strTituloAsunto">Asunto</string>
 </resources>
