--- a/DesafioNotas/app/src/main/res/values/strings.xml
+++ b/DesafioNotas/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="strConfirmacionBorrar">Yes</string>
     <string name="strNegacionBorrar">No</string>
     <string name="strEliminando">Removing</string>
+    <string name="strTituloAsunto">Affair</string>
 </resources>
