--- a/DesafioNotas/app/src/main/res/values-fr-rFR/strings.xml
+++ b/DesafioNotas/app/src/main/res/values-fr-rFR/strings.xml
@@ -11,4 +11,10 @@
     <string name="strNegacionBorrar">Non</string>
     <string name="strEliminando">Retrait</string>
     <string name="strTituloAsunto">Affaire</string>
+    <string name="strHaceYears">years ago</string>
+    <string name="strHaceMeses">months ago</string>
+    <string name="strHaceDias">days ago</string>
+    <string name="strHaceHoras">hours ago</string>
+    <string name="strHaceMinutos">minutes ago</string>
+    <string name="strMenosUnMin">less than a minute ago</string>
 </resources>
