--- a/DesafioNotas/app/src/main/res/values/strings.xml
+++ b/DesafioNotas/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="strNegacionBorrar">No</string>
     <string name="strEliminando">Removing</string>
     <string name="strTituloAsunto">Affair</string>
+    <string name="strHaceYears">years ago</string>
+    <string name="strHaceMeses">months ago</string>
+    <string name="strHaceDias">days ago</string>
+    <string name="strHaceHoras">hours ago</string>
+    <string name="strHaceMinutos">minutes ago</string>
+    <string name="strMenosUnMin">less than a minute ago</string>
 </resources>
