--- a/DesafioNotas/app/src/main/res/values/strings.xml
+++ b/DesafioNotas/app/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="strMensajeTipo">What kind of note do you want to create?</string>
     <string name="strTipoTexto">Text</string>
     <string name="strTipoTareas">Things to do</string>
-    <string name="strTituloBorrar">Delete note</string>
-    <string name="strMensajeBorrar">Are you sure to delete the note?</string>
-    <string name="strConfirmacionBorrar">Yes</string>
-    <string name="strNegacionBorrar">No</string>
+    <string name="strTituloBorrar">Delete</string>
+    <string name="strMensajeBorrar">Are you sure to delete this?</string>
+    <string name="strConfirmacion">Yes</string>
+    <string name="strNegacion">No</string>
     <string name="strEliminando">Removing</string>
     <string name="strTituloAsunto">Affair</string>
     <string name="strHaceYears">years ago</string>
@@ -16,4 +16,10 @@
     <string name="strHaceHoras">hours ago</string>
     <string name="strHaceMinutos">minutes ago</string>
     <string name="strMenosUnMin">less than a minute ago</string>
+    <string name="strTarea">Task</string>
+    <string name="strContactos">Contacts</string>
+    <string name="strMensajeEnviado">Message sent</string>
+    <string name="strTituloGuardar">Save changes</string>
+    <string name="strMensajeGuardar">Do you wish to save changes?</string>
+    <string name="strContactoNoSeleccionado">You have not selected any contact</string>
 </resources>
