Añadida opción de compartir por whatsapp (modo texto)

--- a/DesafioNotas/app/src/main/res/values-es-rES/strings.xml
+++ b/DesafioNotas/app/src/main/res/values-es-rES/strings.xml
@@ -25,4 +25,7 @@
     <string name="strContactoNoSeleccionado">No has seleccionado ningún contacto</string>
     <string name="strSinAsunto">Sin asunto</string>
     <string name="strIndefinida">Indefinida</string>
+    <string name="strTituloCompartir">Compartir</string>
+    <string name="strMensajeCompartir">¿Cómo quiere compartir el contenido?</string>
+    <string name="strWhatsappNoInstalado">Tu dispositivo no tiene whatsapp instalado</string>
 </resources>
