--- a/DesafioNotas/app/src/main/res/values-fr-rFR/strings.xml
+++ b/DesafioNotas/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Remarques</string>
+    <string name="app_name">JarenasColorNote</string>
     <string name="strTituloTipo">" Type de note"</string>
     <string name="strMensajeTipo">Quel type de note voulez-vous créer ?</string>
     <string name="strTipoTexto">Texte</string>
@@ -17,7 +17,7 @@
     <string name="strHaceHoras">hours ago</string>
     <string name="strHaceMinutos">minutes ago</string>
     <string name="strMenosUnMin">less than a minute ago</string>
-    <string name="strTarea">Tâche</string>
+    <string name="strTarea">Remarques</string>
     <string name="strContactos">Contact</string>
     <string name="strMensajeEnviado">"message envoyé "</string>
     <string name="strTituloGuardar">" Sauvegarder les modifications"</string>
